# spinner-rs

./: Cargo.toml  README.md  README.zh-CN.md
examples/: basic.rs  custom_style.rs
src/: lib.rs  main.rs
tests/: builder_api.rs  status_methods.rs
